Fix GHL webhook: send tags as comma-separated string

--- a/free-tools/ai-cold-email-writer/index.html
+++ b/free-tools/ai-cold-email-writer/index.html
@@ -1122,7 +1122,7 @@ document.getElementById('sop-form').addEventListener('submit', async function(e)
       mode: 'no-cors',
       body: JSON.stringify({
         email: email,
-        tags: ['founder-drop', 'cold-email-writer']
+        tags: 'founder-drop,cold-email-writer'
       })
     });
   } catch (e) {
