Use dedicated GHL webhook for cold email writer (tags handled by GHL)

--- a/free-tools/ai-cold-email-writer/index.html
+++ b/free-tools/ai-cold-email-writer/index.html
@@ -1099,7 +1099,7 @@ function copyEmail(emailNum) {
 }
 
 // Email capture form
-const GHL_WEBHOOK_URL = 'https://services.leadconnectorhq.com/hooks/73JctoYNF5rEgo4S5PU0/webhook-trigger/d8dc5980-71a0-45bf-9efc-55cc41b1a976';
+const GHL_WEBHOOK_URL = 'https://services.leadconnectorhq.com/hooks/73JctoYNF5rEgo4S5PU0/webhook-trigger/d5fec5f2-ff46-43de-810d-a335b22ffd2a';
 
 document.getElementById('sop-form').addEventListener('submit', async function(e) {
   e.preventDefault();
@@ -1121,8 +1121,7 @@ document.getElementById('sop-form').addEventListener('submit', async function(e)
       headers: { 'Content-Type': 'application/json' },
       mode: 'no-cors',
       body: JSON.stringify({
-        email: email,
-        tags: 'founder-drop,cold-email-writer'
+        email: email
       })
     });
   } catch (e) {
