feat: PSEO Phase 1 pages + webhook updates + redirect aliases
PSEO Phase 1 content pages:
- best-ai-tools-solo-founders/ - master roundup (47.6KB)
- gohighlevel-review/ - review page (19.5KB)
- copy-ai-review/ - review page (19.5KB)
- opus-pro-review/ - review page (19.5KB)
- gohighlevel-vs-clickfunnels/ - comparison (18.5KB)
- vidiq-vs-tubebuddy/ - comparison (18.6KB)
- copy-ai-vs-jasper/ - comparison (20KB)

Webhook updates:
- free-tools/ai-cold-email-writer: unified webhook + tool_source
- free-tools/instagram-caption-generator: unified webhook + tool_source
- free-tools/ai-prompt-generator: unified webhook + tool_source

Redirects (_redirects):
- Added /go/opuspro alias
- Added /go/facelessvideo alias
- Added /go/sirlinksalot alias
- Added /go/prepostseo alias

All pages include:
- Dark theme (DM Sans + Instrument Serif)
- /go/ affiliate links
- Internal cross-linking
- Founder Toolkit email CTA

--- a/free-tools/ai-prompt-generator/index.html
+++ b/free-tools/ai-prompt-generator/index.html
@@ -1288,9 +1288,8 @@ function copyPrompt(type) {
   });
 }
 
-// Email capture form - GHL webhook placeholder
-// TODO: Add actual GHL webhook URL when created
-const GHL_WEBHOOK_URL = 'https://services.leadconnectorhq.com/hooks/YOUR_LOCATION_ID/webhook-trigger/YOUR_WEBHOOK_ID';
+// Email capture form - Unified homepage webhook with tool_source
+const GHL_WEBHOOK_URL = 'https://services.leadconnectorhq.com/hooks/73JctoYNF5rEgo4S5PU0/webhook-trigger/d8dc5980-71a0-45bf-9efc-55cc41b1a976';
 
 document.getElementById('guide-form').addEventListener('submit', async function(e) {
   e.preventDefault();
@@ -1325,7 +1324,7 @@ document.getElementById('guide-form').addEventListener('submit', async function(
     const response = await fetch(GHL_WEBHOOK_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email: email })
+      body: JSON.stringify({ email: email, tool_source: 'ai-prompt-generator' })
     });
     
     if (response.ok) {
