--- a/free-tools/ai-cold-email-writer/index.html
+++ b/free-tools/ai-cold-email-writer/index.html
@@ -1099,7 +1099,7 @@ function copyEmail(emailNum) {
 }
 
 // Email capture form
-const GHL_WEBHOOK_URL = 'https://services.leadconnectorhq.com/hooks/73JctoYNF5rEgo4S5PU0/webhook-trigger/d5fec5f2-ff46-43de-810d-a335b22ffd2a';
+const GHL_WEBHOOK_URL = 'https://services.leadconnectorhq.com/hooks/73JctoYNF5rEgo4S5PU0/webhook-trigger/d8dc5980-71a0-45bf-9efc-55cc41b1a976';
 
 document.getElementById('sop-form').addEventListener('submit', async function(e) {
   e.preventDefault();
@@ -1125,7 +1125,7 @@ document.getElementById('sop-form').addEventListener('submit', async function(e)
     const response = await fetch(GHL_WEBHOOK_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email: email })
+      body: JSON.stringify({ email: email, tool_source: 'ai-cold-email-writer' })
     });
     
     if (response.ok) {
