Update guides index to include freelance writers guide

--- a/guides/index.html
+++ b/guides/index.html
@@ -356,7 +356,7 @@ body {
     <div class="section-header">
       <span class="icon">🎯</span>
       <h2>AI Tools by Industry</h2>
-      <span class="count">5 guides</span>
+      <span class="count">6 guides</span>
     </div>
     <div class="card-grid">
       <a href="/guides/ai-tools-for-real-estate-agents" class="guide-card">
@@ -373,6 +373,11 @@ body {
         <span class="badge">Accounting</span>
         <h3>Best AI Tools for Accountants</h3>
         <p>Automate bookkeeping, tax prep, and client reports.</p>
+      </a>
+      <a href="/guides/ai-tools-for-freelance-writers" class="guide-card">
+        <span class="badge">Writing</span>
+        <h3>7 Best AI Tools for Freelance Writers</h3>
+        <p>Write better content faster and eliminate writer's block with AI.</p>
       </a>
       <a href="/guides/ai-tools-for-coaches" class="guide-card">
         <span class="badge">Coaching</span>
