Add 4 new pSEO guide pages: virtual assistants, solopreneurs, digital marketers, content creators

--- a/guides/index.html
+++ b/guides/index.html
@@ -356,9 +356,29 @@ body {
     <div class="section-header">
       <span class="icon">🎯</span>
       <h2>AI Tools by Industry</h2>
-      <span class="count">6 guides</span>
+      <span class="count">10 guides</span>
     </div>
     <div class="card-grid">
+      <a href="/guides/ai-tools-for-virtual-assistants" class="guide-card">
+        <span class="badge">Virtual Assistants</span>
+        <h3>Best AI Tools for Virtual Assistants</h3>
+        <p>Automate tasks, manage multiple clients, and scale your VA business.</p>
+      </a>
+      <a href="/guides/ai-tools-for-solopreneurs" class="guide-card">
+        <span class="badge">Solopreneurs</span>
+        <h3>Best AI Tools for Solopreneurs</h3>
+        <p>Run a 1-person business like a full team with AI automation.</p>
+      </a>
+      <a href="/guides/ai-tools-for-digital-marketers" class="guide-card">
+        <span class="badge">Digital Marketing</span>
+        <h3>Best AI Tools for Digital Marketers</h3>
+        <p>Automate campaigns, scale content, and drive better results with AI.</p>
+      </a>
+      <a href="/guides/ai-tools-for-content-creators" class="guide-card">
+        <span class="badge">Content Creators</span>
+        <h3>Best AI Tools for Content Creators</h3>
+        <p>Create more videos, podcasts, and social content in less time.</p>
+      </a>
       <a href="/guides/ai-tools-for-real-estate-agents" class="guide-card">
         <span class="badge">Real Estate</span>
         <h3>7 Best AI Tools for Real Estate Agents</h3>
