Add 3 new pSEO pages + fix affiliate links
New pages:
- jasper-vs-writesonic (Jasper affiliate)
- best-cold-email-tool-for-agencies (Instantly affiliate)
- best-crm-for-life-coaches (GHL affiliate)

Fixed affiliate links:
- instantly-vs-apollo: fixed Instantly + Apollo links
- best-ai-aggregator-tools: fixed Magai link

All affiliate IDs verified against AFFILIATES.md

--- a/guides/best-ai-aggregator-tools/index.html
+++ b/guides/best-ai-aggregator-tools/index.html
@@ -88,7 +88,7 @@
 <strong>Pricing:</strong> $15/month (Silver) • $29/month (Gold) • $99/month (Platinum with unlimited)
 </div>
 
-<a href="https://magai.co/?via=founderdrop" class="tool-cta" target="_blank" rel="noopener">Try Magai Free →</a>
+<a href="https://magai.co/?via=pmat122" class="tool-cta" target="_blank" rel="noopener">Try Magai Free →</a>
 </div>
 
 <div class="tool-card">
@@ -300,7 +300,7 @@
 <h2>🎯 The Verdict</h2>
 
 <p style="background: var(--bg-card); padding: 20px; border-radius: 8px; border-left: 4px solid var(--primary); margin: 24px 0;">
-<strong>For most founders: <a href="https://magai.co/?via=founderdrop" target="_blank" rel="noopener">Magai</a> is the clear winner.</strong><br><br>
+<strong>For most founders: <a href="https://magai.co/?via=pmat122" target="_blank" rel="noopener">Magai</a> is the clear winner.</strong><br><br>
 It combines the best models with a polished interface, file uploads, image generation, and fair pricing. You get more than just model access—you get a complete AI workspace.<br><br>
 <strong>For developers:</strong> OpenRouter gives you API access to everything at the cheapest rates.<br><br>
 <strong>For budget users:</strong> TypingMind's one-time payment + your own API keys might be cheapest long-term.<br><br>
@@ -309,7 +309,7 @@ It combines the best models with a polished interface, file uploads, image gener
 
 <p style="background: linear-gradient(135deg, #1a2a1a 0%, #1a1a2a 100%); padding: 24px; border-radius: 12px; border: 2px solid var(--primary); margin: 32px 0; text-align: center;">
 <strong style="font-size: 1.2rem;">Ready to access all AI models from one place?</strong><br><br>
-<a href="https://magai.co/?via=founderdrop" class="tool-cta" target="_blank" rel="noopener" style="font-size: 1.1rem;">Start Free with Magai →</a><br><br>
+<a href="https://magai.co/?via=pmat122" class="tool-cta" target="_blank" rel="noopener" style="font-size: 1.1rem;">Start Free with Magai →</a><br><br>
 <span style="color: var(--text-secondary); font-size: 0.9rem;">No credit card required. Switch to any plan anytime.</span>
 </p>
 
