--- a/guides/ai-tools-for-staffing-agencies/index.html
+++ b/guides/ai-tools-for-staffing-agencies/index.html
@@ -40,6 +40,10 @@
 
             <div class="guide-body">
                 <h2>Why Staffing Agencies Need AI Now</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
                 <p>The staffing industry is facing a perfect storm: clients want faster fills, candidates have more options than ever, and margins are getting squeezed. Meanwhile, job boards are flooded with noise and your recruiters are drowning in admin work.</p>
                 
                 <p>AI changes the equation. Top agencies are using AI to:</p>
