--- a/guides/best-ai-aggregator-tools/index.html
+++ b/guides/best-ai-aggregator-tools/index.html
@@ -9,6 +9,10 @@
 <p>After testing every major platform, here are the best AI aggregator tools for 2025—ranked by value, features, and founder-friendliness.</p>
 
 <h2>Quick Comparison</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
 <table style="width:100%; border-collapse: collapse; margin: 24px 0;">
 <tr style="background: var(--bg-card);">
 <th style="padding: 12px; text-align: left; border: 1px solid var(--border);">Tool</th>
