--- a/guides/client-acquisition-for-solopreneurs/index.html
+++ b/guides/client-acquisition-for-solopreneurs/index.html
@@ -9,6 +9,10 @@
 <p>If you're a solopreneur stuck in the feast-or-famine cycle, you're not alone. And here's the thing—it's probably not your fault. The problem isn't your work ethic. It's not your offer. It's not even your content. The problem is that nobody told you what's actually broken in your client acquisition process.</p>
 
 <h2>Why Common Advice Fails Solopreneurs</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
 
 <p>Let's talk about the advice you've probably heard a hundred times.</p>
 
