--- a/guides/how-to-follow-up-with-leads-without-being-annoying/index.html
+++ b/guides/how-to-follow-up-with-leads-without-being-annoying/index.html
@@ -9,6 +9,10 @@
 <p>You don't want to be "that person." The one who won't take a hint. The one clogging up someone's inbox with "just checking in" messages. So you wait. And wait some more. And eventually, the lead goes cold. Sound familiar?</p>
 
 <h2>Why the Common Advice Doesn't Work</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> automates your entire follow-up sequence. Set it once, and leads get the right message at the right time—without you lifting a finger.
+</div>
+
 
 <p>Here's what you've probably heard before:</p>
 
