--- a/guides/why-my-funnel-isnt-converting/index.html
+++ b/guides/why-my-funnel-isnt-converting/index.html
@@ -9,6 +9,10 @@
 <p>And now you're staring at your analytics wondering what the hell went wrong. Leads trickle in. Most ghost you. The ones who do book calls show up confused. They ask basic questions. They need to "think about it." They disappear forever. Your funnel exists. It just doesn't convert. And it's driving you crazy.</p>
 
 <h2>The Advice You've Already Tried</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
 
 <p>When your funnel doesn't convert, people give you the same tired advice:</p>
 
