--- a/guides/ai-tools-for-saas-founders/index.html
+++ b/guides/ai-tools-for-saas-founders/index.html
@@ -40,6 +40,10 @@
 
             <div class="guide-body">
                 <h2>Why AI Is Non-Negotiable for SaaS Founders</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
                 <p>As a SaaS founder, you're probably already technical—which means you understand what AI can really do. But the gap between building product and building a business is where most SaaS companies die. Marketing, sales, content, outreach—this is where AI delivers 10x leverage.</p>
                 
                 <p>The most successful bootstrapped and early-stage SaaS founders are using AI to:</p>
