--- a/guides/ai-tools-for-sales-sdrs/index.html
+++ b/guides/ai-tools-for-sales-sdrs/index.html
@@ -172,6 +172,25 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-
     <a href="/go/apollo" class="tool-cta">Try Apollo →</a>
   </div>
 
+  <!-- Tool: GoHighLevel (CRM & Automation) -->
+  <div class="tool-card">
+    <div class="tool-header">
+      <div>
+        <h2>GoHighLevel</h2>
+      </div>
+      <span class="tool-tag">CRM & Automation</span>
+    </div>
+    <p class="tool-description">
+      All-in-one CRM, funnel builder, and automation platform. Capture leads, nurture with automated emails/SMS, book appointments, and manage your entire client pipeline in one place.
+    </p>
+    <div class="tool-why">
+      <strong>Why Professionals Love It:</strong>
+      <p>Stop juggling 5 different tools. GoHighLevel replaces your CRM, email marketing, appointment booking, and funnel software with one integrated system. Automate follow-ups so no lead falls through the cracks. Most users save 10+ hours per week on admin.</p>
+    </div>
+    <a href="/go/ghl" class="tool-cta">Try GoHighLevel Free →</a>
+  </div>
+
+
   <!-- Tool 2 -->
   <div class="tool-card">
     <div class="tool-header">
