--- a/guides/best-cold-email-tool-for-agencies/index.html
+++ b/guides/best-cold-email-tool-for-agencies/index.html
@@ -8,6 +8,10 @@
 <p>We spent months testing the leading platforms specifically for agency use cases. Here's what we found.</p>
 
 <h2>What Agencies Actually Need</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
 
 <p>Before diving into tools, let's clarify what separates agency-grade cold email software from tools built for individual founders:</p>
 
