--- a/guides/how-to-get-consulting-clients-without-cold-calling/index.html
+++ b/guides/how-to-get-consulting-clients-without-cold-calling/index.html
@@ -9,6 +9,10 @@
 <p>There has to be a better way. You've felt this in your gut. The consultants you admire don't seem to chase clients. Clients chase them. But when you look for answers, all you find is vague advice that doesn't help.</p>
 
 <h2>Why Common Advice Fails Consultants</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
 
 <p>Let's talk about the advice you've probably heard. And why it hasn't worked.</p>
 
