--- a/guides/why-am-i-not-getting-clients/index.html
+++ b/guides/why-am-i-not-getting-clients/index.html
@@ -11,6 +11,10 @@
 <p>Here's the truth: You're not broken. Your work ethic isn't the problem. Something else is.</p>
 
 <h2>The Advice That Doesn't Work</h2>
+<div style="background: var(--bg-card); padding: 24px; border-radius: 8px; border-left: 3px solid var(--primary); margin: 24px 0;">
+  <strong>🔧 Tool Recommendation:</strong> <a href="/go/ghl" style="color: var(--primary);">GoHighLevel</a> is the all-in-one platform that handles CRM, funnels, email/SMS automation, and appointment booking. One tool to replace them all.
+</div>
+
 
 <p>When you ask for help, you hear the same things over and over:</p>
 
